did some refactoring, renamed branches, implemented enums for relationship and leaf node types