@@ -2,60 +2,46 @@ package parser;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-import java.io.IOException;
-import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import org.eclipse.jface.text.BadLocationException;
-import org.eclipse.text.edits.MalformedTreeException;
 import org.junit.jupiter.api.Test;
 import model.LeafNode;
 import model.PackageNode;
 
 class ParserTest {
-	
-	private Map<String, PackageNode> packageNodes;
-	private Map<String, PackageNode> subNodes = new HashMap<String, PackageNode>();
-	private List<String> sourcesSubPackages = new ArrayList<String>();
-	private List<String> viewsLeafNodes = new ArrayList<String>();
-	private List<String> strategiesLeafNodes = new ArrayList<String>();
-	private List<String> modelsLeafNodes = new ArrayList<String>();
-	private List<String> commandsLeafNodes = new ArrayList<String>();
-	private List<String> controllersLeafNodes = new ArrayList<String>();
-	private Parser parser;
+
 	@Test
-	void test() throws IOException, MalformedTreeException, BadLocationException, ParseException{
-		parser = new Parser("src\\test\\resources\\LatexEditor\\src");
-		sourcesSubPackages = new ArrayList<>(Arrays.asList(
+	void test() {
+		Parser parser = new Parser("src\\test\\resources\\LatexEditor\\src");
+		List<String> sourcesSubPackages = new ArrayList<>(Arrays.asList(
 				"src\\test\\resources\\LatexEditor\\src\\controller",
 				"src\\test\\resources\\LatexEditor\\src\\model",
 				"src\\test\\resources\\LatexEditor\\src\\view"));
-		viewsLeafNodes = new ArrayList<>(Arrays.asList(
+		List<String> viewsLeafNodes = new ArrayList<>(Arrays.asList(
 				"src\\test\\resources\\LatexEditor\\src\\view\\ChooseTemplate.java",
 				"src\\test\\resources\\LatexEditor\\src\\view\\LatexEditorView.java",
 				"src\\test\\resources\\LatexEditor\\src\\view\\MainWindow.java",
 				"src\\test\\resources\\LatexEditor\\src\\view\\OpeningWindow.java"
-				));
-		controllersLeafNodes = new ArrayList<>(Arrays.asList(
+		));
+		List<String> controllersLeafNodes = new ArrayList<>(List.of(
 				"src\\test\\resources\\LatexEditor\\src\\controller\\LatexEditorController.java"
-				));
-		strategiesLeafNodes = new ArrayList<>(Arrays.asList(
+		));
+		List<String> strategiesLeafNodes = new ArrayList<>(Arrays.asList(
 				"src\\test\\resources\\LatexEditor\\src\\model\\strategies\\StableVersionsStrategy.java",
 				"src\\test\\resources\\LatexEditor\\src\\model\\strategies\\VersionsStrategy.java",
 				"src\\test\\resources\\LatexEditor\\src\\model\\strategies\\VolatileVersionsStrategy.java",
 				"src\\test\\resources\\LatexEditor\\src\\model\\strategies\\VersionsStrategyFactory.java"
-				));
-		modelsLeafNodes = new ArrayList<>(Arrays.asList(
+		));
+		List<String> modelsLeafNodes = new ArrayList<>(Arrays.asList(
 				"src\\test\\resources\\LatexEditor\\src\\model\\Document.java",
 				"src\\test\\resources\\LatexEditor\\src\\model\\DocumentManager.java",
 				"src\\test\\resources\\LatexEditor\\src\\model\\VersionsManager.java"
-				));
-		commandsLeafNodes = new ArrayList<>(Arrays.asList(
+		));
+		List<String> commandsLeafNodes = new ArrayList<>(Arrays.asList(
 				"src\\test\\resources\\LatexEditor\\src\\controller\\commands\\AddLatexCommand.java",
 				"src\\test\\resources\\LatexEditor\\src\\controller\\commands\\Command.java",
 				"src\\test\\resources\\LatexEditor\\src\\controller\\commands\\CommandFactory.java",
@@ -67,15 +53,15 @@ class ParserTest {
 				"src\\test\\resources\\LatexEditor\\src\\controller\\commands\\DisableVersionsManagementCommand.java",
 				"src\\test\\resources\\LatexEditor\\src\\controller\\commands\\EnableVersionsManagementCommand.java",
 				"src\\test\\resources\\LatexEditor\\src\\controller\\commands\\RollbackToPreviousVersionCommand.java"
-				));
-		packageNodes = parser.getPackageNodes();
+		));
+		Map<String, PackageNode> packageNodes = parser.getPackageNodes();
 		
 		PackageNode controllerPackage = packageNodes.get("controller");
-		List<String> testingLeafNodes = new ArrayList<String>();
+		List<String> testingLeafNodes = new ArrayList<>();
 		assertEquals("src\\test\\resources\\LatexEditor\\src\\controller", controllerPackage.getNodesPath());
 		assertEquals("src\\test\\resources\\LatexEditor\\src", controllerPackage.getParentNode().getNodesPath());
-		assertEquals(true, controllerPackage.isValid(), "message");
-		subNodes = controllerPackage.getSubNodes();
+		assertTrue(controllerPackage.isValid(), "message");
+		Map<String, PackageNode> subNodes = controllerPackage.getSubNodes();
 		assertEquals("src\\test\\resources\\LatexEditor\\src\\controller\\commands", subNodes.get("commands").getNodesPath());
 		
 		for (LeafNode l: controllerPackage.getLeafNodes().values()) {
@@ -92,7 +78,7 @@ class ParserTest {
 		PackageNode commandsPackage = packageNodes.get("commands");
 		assertEquals("src\\test\\resources\\LatexEditor\\src\\controller\\commands", commandsPackage.getNodesPath());
 		assertEquals("src\\test\\resources\\LatexEditor\\src\\controller", commandsPackage.getParentNode().getNodesPath());
-		assertEquals(true, commandsPackage.isValid());
+		assertTrue(commandsPackage.isValid());
 		subNodes = commandsPackage.getSubNodes();
 		assertEquals(0, subNodes.size());
 		for (LeafNode l: commandsPackage.getLeafNodes().values()) {
@@ -109,7 +95,7 @@ class ParserTest {
 		PackageNode modelPackage = packageNodes.get("model");
 		assertEquals("src\\test\\resources\\LatexEditor\\src\\model", modelPackage.getNodesPath());
 		assertEquals("src\\test\\resources\\LatexEditor\\src", modelPackage.getParentNode().getNodesPath());
-		assertEquals(true, modelPackage.isValid());
+		assertTrue(modelPackage.isValid());
 		subNodes = modelPackage.getSubNodes();
 		assertEquals("src\\test\\resources\\LatexEditor\\src\\model\\strategies", subNodes.get("strategies").getNodesPath());
 		for (LeafNode l: modelPackage.getLeafNodes().values()) {
@@ -126,7 +112,7 @@ class ParserTest {
 		PackageNode strategiesPackage = packageNodes.get("strategies");
 		assertEquals("src\\test\\resources\\LatexEditor\\src\\model\\strategies", strategiesPackage.getNodesPath());
 		assertEquals("src\\test\\resources\\LatexEditor\\src\\model", strategiesPackage.getParentNode().getNodesPath());
-		assertEquals(true, strategiesPackage.isValid());
+		assertTrue(strategiesPackage.isValid());
 		subNodes = strategiesPackage.getSubNodes();
 		assertEquals(0, subNodes.size());
 		for (LeafNode l: strategiesPackage.getLeafNodes().values()) {
@@ -143,7 +129,7 @@ class ParserTest {
 		PackageNode viewPackage = packageNodes.get("view");
 		assertEquals("src\\test\\resources\\LatexEditor\\src\\view", viewPackage.getNodesPath());
 		assertEquals("src\\test\\resources\\LatexEditor\\src", viewPackage.getParentNode().getNodesPath());
-		assertEquals(true, viewPackage.isValid());
+		assertTrue(viewPackage.isValid());
 		subNodes = viewPackage.getSubNodes();
 		assertEquals(0, subNodes.size());
 		for (LeafNode l: viewPackage.getLeafNodes().values()) {
@@ -160,9 +146,9 @@ class ParserTest {
 		PackageNode sourcePackage = packageNodes.get("src");
 		assertEquals("src\\test\\resources\\LatexEditor\\src", sourcePackage.getNodesPath());
 		assertEquals("", sourcePackage.getParentNode().getNodesPath());
-		assertEquals(false, sourcePackage.isValid());
+		assertFalse(sourcePackage.isValid());
 		subNodes = sourcePackage.getSubNodes();
-		List<String> testingSubPackages = new ArrayList<String>();
+		List<String> testingSubPackages = new ArrayList<>();
 		for (PackageNode subP: subNodes.values()) {
 			testingSubPackages.add(subP.getNodesPath());
 		}
